[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/CardSprites/SpriteHolder.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Timeless-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/MorrisRomanBlack.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/UI/Kingdom/Member.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="Member" type="Panel"]
margin_right = 910.0
margin_bottom = 70.0
rect_min_size = Vector2( 910, 70 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -455.0
margin_top = -25.0
margin_right = 455.0
margin_bottom = 25.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="InfoContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="Sprite" type="Sprite" parent="InfoContainer/Icon"]
position = Vector2( 35, 25 )
scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 1 )

[node name="Name" type="Button" parent="InfoContainer"]
margin_left = 70.0
margin_right = 252.0
margin_bottom = 50.0
rect_min_size = Vector2( 182, 50 )
custom_fonts/font = SubResource( 1 )
text = "Alec"

[node name="Contribution" type="VBoxContainer" parent="InfoContainer"]
margin_left = 272.0
margin_right = 432.0
margin_bottom = 50.0
rect_min_size = Vector2( 160, 50 )
custom_constants/separation = 10

[node name="TotalContribution" type="HBoxContainer" parent="InfoContainer/Contribution"]
margin_right = 160.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="InfoContainer/Contribution/TotalContribution"]
margin_right = 40.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 20 )
custom_fonts/font = SubResource( 1 )
text = "Total"
align = 1
valign = 1

[node name="Count" type="Label" parent="InfoContainer/Contribution/TotalContribution"]
margin_left = 44.0
margin_right = 154.0
margin_bottom = 20.0
rect_min_size = Vector2( 110, 20 )
custom_fonts/font = SubResource( 2 )
text = "999999999999"
align = 2

[node name="WeeklyContribution" type="HBoxContainer" parent="InfoContainer/Contribution"]
margin_top = 30.0
margin_right = 160.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="InfoContainer/Contribution/WeeklyContribution"]
margin_right = 40.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 20 )
custom_fonts/font = SubResource( 3 )
text = "Week"
align = 1
valign = 1

[node name="Count" type="Label" parent="InfoContainer/Contribution/WeeklyContribution"]
margin_left = 44.0
margin_right = 154.0
margin_bottom = 20.0
rect_min_size = Vector2( 110, 20 )
custom_fonts/font = SubResource( 2 )
text = "999999999999"
align = 2

[node name="HonorCount" type="Label" parent="InfoContainer"]
margin_left = 452.0
margin_right = 542.0
margin_bottom = 50.0
rect_min_size = Vector2( 90, 50 )
custom_fonts/font = SubResource( 4 )
text = "999999999"
align = 1
valign = 1

[node name="InfluenceCount" type="Label" parent="InfoContainer"]
margin_left = 562.0
margin_right = 662.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_fonts/font = SubResource( 4 )
text = "9999999"
align = 1
valign = 1

[node name="Homeland" type="Label" parent="InfoContainer"]
margin_left = 682.0
margin_right = 772.0
margin_bottom = 50.0
rect_min_size = Vector2( 90, 50 )
custom_fonts/font = SubResource( 1 )
text = "Nordic"
align = 1
valign = 1

[node name="Position" type="Label" parent="InfoContainer"]
margin_left = 792.0
margin_right = 912.0
margin_bottom = 50.0
rect_min_size = Vector2( 120, 50 )
custom_fonts/font = SubResource( 1 )
text = "King"
align = 1
valign = 1
autowrap = true
